# MultiCamera

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
src/: AppTheme.h  CameraManager.cpp  CameraManager.h  CameraTypes.h  FrameConverter.cpp  FrameConverter.h  HikvisionBackend.cpp  HikvisionBackend.h  HikvisionCameraDevice.cpp  HikvisionCameraDevice.h  ICameraBackend.h  ICameraDevice.h  MainWindow.cpp  MainWindow.h  MindvisionBackend.cpp  MindvisionBackend.h  MindvisionCameraDevice.cpp  MindvisionCameraDevice.h  OrbbecBackend.cpp  OrbbecBackend.h  OrbbecCameraDevice.cpp  OrbbecCameraDevice.h  TriggerBarrier.h  main.cpp
